--- a/my.cnf
+++ b/my.cnf
@@ -22,12 +22,18 @@ skip_name_resolve = 1
 max_connections = 512
 max_connect_errors = 1000000
 
-# session memory setting #
-read_buffer_size = 16777216
-read_rnd_buffer_size = 33554432
-sort_buffer_size = 33554432
-tmp_table_size = 67108864
-join_buffer_size = 134217728
+# table cache performance settings
+table_open_cache = 4096
+table_definition_cache = 4096
+table_open_cache_instances = 128
+
+# session memory settings #
+read_buffer_size = 16M
+read_rnd_buffer_size = 32M
+sort_buffer_size = 32M
+tmp_table_size = 64M
+join_buffer_size = 128M
+thread_cache_size = 64
 
 # log settings #
 log_error = error.log
@@ -75,8 +81,10 @@ innodb_read_io_threads = 16
 innodb_file_per_table = 1
 innodb_stats_persistent_sample_pages = 64
 innodb_autoinc_lock_mode = 2
+innodb_online_alter_log_max_size=1G
+innodb_open_files=4096
 
-# replication setting #
+# replication settings #
 master_info_repository = TABLE
 relay_log_info_repository = TABLE
 sync_binlog = 1
@@ -87,7 +95,6 @@ binlog_format = ROW
 binlog_rows_query_log_events = 1
 relay_log = relay.log
 relay_log_recovery = 1
-binlog_gtid_simple_recovery = 1
 slave_skip_errors = ddl_exist_errors
 slave-rows-search-algorithms = 'INDEX_SCAN,HASH_SCAN'
 
@@ -101,20 +108,24 @@ rpl_semi_sync_slave_enabled = 1
 validate_password_policy=STRONG
 validate-password=FORCE_PLUS_PERMANENT
 
+[mysqld-5.6]
+# metalock performance settings
+metadata_locks_hash_instances=64
+
 [mysqld-5.7]
-# new innodb setting #
+# new innodb settings #
 loose_innodb_numa_interleave=1
 innodb_buffer_pool_dump_pct = 40
 innodb_page_cleaners = 16
 innodb_undo_log_truncate = 1
 innodb_max_undo_log_size = 2G
 innodb_purge_rseg_truncate_frequency = 128
-# new replication setting #
+# new replication settings #
 slave-parallel-type = LOGICAL_CLOCK
 slave-parallel-workers = 16
 slave_preserve_commit_order=1
 slave_transaction_retries=128
-# other change setting #
+# other change settings #
 binlog_gtid_simple_recovery=1
 log_timestamps=system
 show_compatibility_56=on
