--- a/my.cnf
+++ b/my.cnf
@@ -1,5 +1,10 @@
 # author: jiangchengyao@gmail.com
 
+[client]
+user = root
+password = 1111aaA_
+
+[mysql]
 [mysql]
 prompt = [\\u@\\h][\\d]>\\_
 
@@ -8,10 +13,12 @@ prompt = [\\u@\\h][\\d]>\\_
 user = mysql
 sql_mode = "STRICT_TRANS_TABLES,NO_ENGINE_SUBSTITUTION,NO_ZERO_DATE,NO_ZERO_IN_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_AUTO_CREATE_USER"
 autocommit = 1
+server-id = 8888
 character_set_server=utf8mb4
+datadir=/mysql_data/data
 transaction_isolation = READ-COMMITTED
 explicit_defaults_for_timestamp = 1
-max_allowed_packet = 16777216
+max_allowed_packet = 64M
 event_scheduler = 1
 
 # connection #
@@ -19,13 +26,14 @@ interactive_timeout = 1800
 wait_timeout = 1800
 lock_wait_timeout = 1800
 skip_name_resolve = 1
-max_connections = 512
+max_connections = 1024
+max_user_connections = 256
 max_connect_errors = 1000000
 
 # table cache performance settings
 table_open_cache = 4096
 table_definition_cache = 4096
-table_open_cache_instances = 128
+table_open_cache_instances = 64
 
 # session memory settings #
 read_buffer_size = 16M
@@ -37,6 +45,9 @@ thread_cache_size = 64
 
 # log settings #
 log_error = error.log
+log_bin = binlog
+log_error_verbosity = 2
+general_log_file = general.log
 slow_query_log = 1
 slow_query_log_file = slow.log
 log_queries_not_using_indexes = 1
@@ -62,20 +73,18 @@ innodb_lock_wait_timeout = 5
 innodb_io_capacity = 10000
 innodb_io_capacity_max = 20000
 innodb_flush_method = O_DIRECT
-innodb_file_format = Barracuda
-innodb_file_format_max = Barracuda
 innodb_undo_logs = 128
 innodb_undo_tablespaces = 3
 innodb_flush_neighbors = 0
-innodb_log_file_size = 17179869184
+innodb_log_file_size = 16G
 innodb_log_files_in_group = 2
-innodb_log_buffer_size = 16777216
+innodb_log_buffer_size = 64M
 innodb_purge_threads = 4
 innodb_large_prefix = 1
 innodb_thread_concurrency = 64
 innodb_print_all_deadlocks = 1
 innodb_strict_mode = 1
-innodb_sort_buffer_size = 67108864
+innodb_sort_buffer_size = 128M
 innodb_write_io_threads = 16
 innodb_read_io_threads = 16 
 innodb_file_per_table = 1
@@ -99,34 +108,56 @@ slave_skip_errors = ddl_exist_errors
 slave-rows-search-algorithms = 'INDEX_SCAN,HASH_SCAN'
 
 # semi sync replication settings #
-plugin_load = "validate_password.so;rpl_semi_sync_master=semisync_master.so;rpl_semi_sync_slave=semisync_slave.so"
-rpl_semi_sync_master_enabled = 1
-rpl_semi_sync_master_timeout = 3000
-rpl_semi_sync_slave_enabled = 1
+plugin-load = "group_replication.so;validate_password.so;semisync_master.so;semisync_slave.so"
+loose_rpl_semi_sync_master_enabled = 1
+loose_rpl_semi_sync_master_timeout = 3000
+loose_rpl_semi_sync_slave_enabled = 1
 
 # password plugin #
-validate_password_policy=STRONG
-validate-password=FORCE_PLUS_PERMANENT
+validate_password_policy = STRONG
+validate-password = FORCE_PLUS_PERMANENT
+
+# perforamnce_schema settings
+performance-schema-instrument='memory/%=COUNTED'
+performance_schema_digests_size = 40000
+performance_schema_max_table_instances = 40000
+performance_schema_max_sql_text_length = 4096
+performance_schema_max_digest_length = 4096
 
 [mysqld-5.6]
 # metalock performance settings
-metadata_locks_hash_instances=64
+metadata_locks_hash_instances = 64
 
 [mysqld-5.7]
 # new innodb settings #
-loose_innodb_numa_interleave=1
+loose_innodb_numa_interleave = 1
 innodb_buffer_pool_dump_pct = 40
 innodb_page_cleaners = 16
 innodb_undo_log_truncate = 1
 innodb_max_undo_log_size = 2G
 innodb_purge_rseg_truncate_frequency = 128
+
 # new replication settings #
 slave-parallel-type = LOGICAL_CLOCK
 slave-parallel-workers = 16
-slave_preserve_commit_order=1
-slave_transaction_retries=128
+slave_preserve_commit_order = 1
+slave_transaction_retries = 128
 # other change settings #
-binlog_gtid_simple_recovery=1
-log_timestamps=system
-show_compatibility_56=on
+binlog_gtid_simple_recovery = 1
+log_timestamps = system
+show_compatibility_56 = on
 
+# group replication settings
+plugin-load = "group_replication.so;validate_password.so;semisync_master.so;semisync_slave.so"
+transaction-write-set-extraction = XXHASH64
+# report_host = 127.0.0.1 # optional for group replication
+# binlog_checksum = NONE # only for group replication
+loose_group_replication = FORCE_PLUS_PERMANENT
+loose_group_replication_group_name = "aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa"
+loose_group_replication_compression_threshold = 100
+loose_group_replication_flow_control_mode = 0
+loose_group_replication_single_primary_mode = 0
+loose_group_replication_enforce_update_everywhere_checks = 1
+loose_group_replication_transaction_size_limit = 10485760
+loose_group_replication_unreachable_majority_timeout = 120
+loose_group_replication_start_on_boot = 0
