fix some duplicate variables
add missing tcmalloc for mysqld_safe

--- a/my.cnf
+++ b/my.cnf
@@ -5,8 +5,14 @@ user = root
 password = 1111aaA_
 
 [mysql]
-[mysql]
-prompt = [\\u@\\h][\\d]>\\_
+prompt = [\\u@\\p][\\d]>\\_
+no-auto-rehash
+
+[mysqld_safe]
+malloc-lib=tcmalloc
+
+[mysqldump]
+single-transaction
 
 [mysqld]
 # basic settings #
@@ -57,9 +63,7 @@ log_throttle_queries_not_using_indexes = 10
 expire_logs_days = 90
 long_query_time = 2
 min_examined_row_limit = 100
-binlog-rows-query-log-events = 1
 log-bin-trust-function-creators = 1
-expire-logs-days = 90
 log-slave-updates = 1
 
 # innodb settings #
